trunk/Archive2/a0/3c61dc0c33c94b/output
main.cpp:21:1: error: macro "BOOST_FUSION_ADAPT_STRUCT_FILLER_0" passed 3 arguments, but takes just 2
     (DoubleTemplate<int, int>, dt) )
 ^
